// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CITrial Modal Rendering should render CITrial with Create Pipeline Form when isSelect is false 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-xxxlarge"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-large"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="ci-main"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <path
            clip-rule="evenodd"
            d="M12.005 10.97a2.9 2.9 0 01-3.003-2.96 2.9 2.9 0 013.002-3.008 2.927 2.927 0 012.994 3.007 2.882 2.882 0 01-2.993 2.989v-.027zM6 .9a9.987 9.987 0 014.203-.9C15.56-.053 19.945 4.258 20 9.63v.144A9.928 9.928 0 0119.103 14l-3.092-3.102a5.15 5.15 0 00.762-2.697 4.743 4.743 0 00-4.93-4.937 5.013 5.013 0 00-2.688.765L6 .899zM3.991 2.2l-.099.09L7.36 5.734a5.16 5.16 0 00-.766 2.762c-.081 2.635 1.977 4.838 4.597 4.921.116.003.232.002.349-.002a5.116 5.116 0 002.774-.77L17.8 16.13A9.792 9.792 0 019.91 20c-5.393.08-9.829-4.25-9.908-9.673L0 10.153A9.645 9.645 0 013.99 2.2z"
            fill="url(#ci-main_svg__paint0_linear)"
            fill-rule="evenodd"
          />
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="ci-main_svg__paint0_linear"
              x1="-6.46"
              x2="6.46"
              y1="6.46"
              y2="26.46"
            >
              <stop
                stop-color="#73DFE7"
              />
              <stop
                offset="1"
                stop-color="#0095F7"
              />
            </lineargradient>
          </defs>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main"
        style="color: black; font-size: medium;"
      >
        ci.continuous
      </p>
      <p
        class="StyledProps--font StyledProps--main"
        style="color: white; text-align: center; width: 120px; border-radius: 3px; margin-left: 30px; display: inline-block;"
      >
        common.trialInProgress
      </p>
    </div>
    <div
      class="Layout--horizontal StyledProps--main StyledProps--padding-top-large"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-right-xxxlarge"
        style="width: 57%;"
      >
        <p
          class="StyledProps--font StyledProps--main"
          style="width: 380px; display: inline-block; margin-left: 30px; line-height: 2;"
        >
          ci.ciTrialHomePage.startTrial.description
        </p>
        <img
          height="400"
          src="test-file-stub"
          style="margin-left: -40px; margin-top: -30px;"
          width="800"
        />
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-left-xxxlarge StyledProps--border StyledProps--border-left"
        style="width: 30%; height: 400px;"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <p
                class="StyledProps--font StyledProps--main"
                style="color: black; padding-bottom: 8px; font-weight: 600; font-size: large;"
              >
                pipeline.createPipeline.setupHeader
              </p>
              <p
                class="StyledProps--font StyledProps--main"
                style="color: black; padding-bottom: 40px;"
              >
                pipeline.createPipeline.setupSubtitle
              </p>
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="InputWithIdentifier--txtNameContainer TextInput--main"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ID
                      :
                    </p>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                          tabindex="0"
                        >
                          <span
                            class="bp3-editable-text-content"
                            style="height: 1px; line-height: 1px; min-width: 0;"
                          />
                        </div>
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps--main"
                      icon="edit"
                      style="vertical-align: middle;"
                    >
                      <svg
                        data-icon="edit"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="bp3-form-group"
                    data-id="name-0"
                  >
                    <label
                      class="bp3-label"
                      for="name"
                    >
                      name
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="name"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main"
                    style="font-size: 13px; font-weight: normal;"
                  >
                    optionalField
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                      data-name="edit"
                      data-testid="description-edit"
                      icon="edit"
                    >
                      <svg
                        data-icon="edit"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </label>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main"
                    style="font-size: 13px; font-weight: normal;"
                  >
                    optionalField
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                      data-name="edit"
                      data-testid="tags-edit"
                      icon="edit"
                    >
                      <svg
                        data-icon="edit"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-large"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    start
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                  type="reset"
                >
                  <span
                    class="bp3-button-text"
                  >
                    pipeline.createPipeline.setupLater
                  </span>
                </button>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--padding-top-large"
              >
                <a
                  href="/"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-blue700 StyledProps--font-normal"
                      style="display: flex; align-items: center;"
                    >
                      pipeline.createPipeline.learnMore
                      <span
                        class="bp3-icon bp3-icon-chevron-right StyledProps--main StyledProps--padding-left-xsmall StyledProps--color StyledProps--color-blue700"
                        icon="chevron-right"
                      >
                        <svg
                          data-icon="chevron-right"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            chevron-right
                          </desc>
                          <path
                            d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </p>
                  </div>
                </a>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CITrial Modal Rendering should render CITrial with Select Pipeline Form when isSelect is true 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-xxxlarge"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-large"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="ci-main"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <path
            clip-rule="evenodd"
            d="M12.005 10.97a2.9 2.9 0 01-3.003-2.96 2.9 2.9 0 013.002-3.008 2.927 2.927 0 012.994 3.007 2.882 2.882 0 01-2.993 2.989v-.027zM6 .9a9.987 9.987 0 014.203-.9C15.56-.053 19.945 4.258 20 9.63v.144A9.928 9.928 0 0119.103 14l-3.092-3.102a5.15 5.15 0 00.762-2.697 4.743 4.743 0 00-4.93-4.937 5.013 5.013 0 00-2.688.765L6 .899zM3.991 2.2l-.099.09L7.36 5.734a5.16 5.16 0 00-.766 2.762c-.081 2.635 1.977 4.838 4.597 4.921.116.003.232.002.349-.002a5.116 5.116 0 002.774-.77L17.8 16.13A9.792 9.792 0 019.91 20c-5.393.08-9.829-4.25-9.908-9.673L0 10.153A9.645 9.645 0 013.99 2.2z"
            fill="url(#ci-main_svg__paint0_linear)"
            fill-rule="evenodd"
          />
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="ci-main_svg__paint0_linear"
              x1="-6.46"
              x2="6.46"
              y1="6.46"
              y2="26.46"
            >
              <stop
                stop-color="#73DFE7"
              />
              <stop
                offset="1"
                stop-color="#0095F7"
              />
            </lineargradient>
          </defs>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main"
        style="color: black; font-size: medium;"
      >
        ci.continuous
      </p>
      <p
        class="StyledProps--font StyledProps--main"
        style="color: white; text-align: center; width: 120px; border-radius: 3px; margin-left: 30px; display: inline-block;"
      >
        common.trialInProgress
      </p>
    </div>
    <div
      class="Layout--horizontal StyledProps--main StyledProps--padding-top-large"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-right-xxxlarge"
        style="width: 57%;"
      >
        <p
          class="StyledProps--font StyledProps--main"
          style="width: 380px; display: inline-block; margin-left: 30px; line-height: 2;"
        >
          pipeline.selectOrCreateForm.description
        </p>
        <img
          height="400"
          src="test-file-stub"
          style="margin-left: -40px; margin-top: -30px;"
          width="800"
        />
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-left-xxxlarge StyledProps--border StyledProps--border-left"
        style="width: 30%; height: 400px;"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <p
                class="StyledProps--font StyledProps--main"
                style="color: black; padding-bottom: 8px; font-weight: 600; font-size: large;"
              >
                pipeline.selectOrCreatePipeline.setupHeader
              </p>
              <p
                class="StyledProps--font StyledProps--main"
                style="color: black; padding-bottom: 40px;"
              >
                common.letsGetYouStarted
              </p>
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-large StyledProps--padding-bottom-small"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="color: black;"
                >
                  pipeline.selectOrCreatePipeline.selectAPipeline
                </p>
                <div
                  class="bp3-popover-wrapper select"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <button
                        class="bp3-button main"
                        data-testid="pipeline-select"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                           
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-down"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group pipelineRequired"
                  data-id="pipelineRequired-0"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="pipelineRequired"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-large"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    continue
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                  style="text-align: center; padding: 7px; width: 150px; height: 33px; display: inline-block; border-width: 1px;"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    pipeline.createANewPipeline
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
